- Address Book & Custom Fields: fixed advanced searching Tree Select custom fields in Address Book module.

22-10-2014 5.0.88
- Files: Can now globally copy-paste/cut-paste files and folders using the File Browser window and the Files module.
- Billing: Fixed menu item New > Invoice/Quote.

20-10-2014 5.0.87
- Billing: Fixed problem with Ioncube and the billing cost codes request.
- Fix for Excel HEAD request "Microsoft Office Existence Discovery": respond with 501 Not Implemented.

17-10-2014 5.0.86
- Billing: Added global cost codes and their attached tracking codes
- Billing: Added due date for orders. Also added 2 template variables that can be used in the templates: {due_date} {due_days}
- Remove quotes from SINCE and BEFORE queries to IMAP server as in RFC1730
- Calendar: Name the exception event if calendar import is from Outlook.

10-10-2014 5.0.85
- Tracking code in billing items
- Calendar & Email: Fixed bug for creating emails from calendar events.
- Z-Push 2.1: Fixed timezone bug in iPhone task sync.
- Tickets: Fixed report: count also tickets in status Open.
- Calendar: Fixed calendar name positioning in month view Print.

08-10-2014 5.0.84
- save attachment bug
- Calendar month print will now show events between before 08:00 and after 17:59
- Fixed summer- / wintertime issue in the calendar's month print
- Calendar: Event context menu, disabled copy of private events

07-10-2014 5.0.83
- Signed GOTA jar file unit 2016.

06-10-2014 5.0.82
- Email: Fixed problem with saving attachments of linked emails.
- Check if fopen succeeded to prevent infinite loop

- Calendar: recurring event dialog now also works in List Grid.
- Workflow: Fixed: When disapproved: email and reminder for workflow starter and for workflow owner.
- Ajax timeout increased to 3 minutes for all of Group-Office.
- Calendar: Now possible to copy events from a read-only calendar to a writable calendar using right-click menu.